access codes from GA4GH

--- a/python_helper_code_and_jsons/munging_dictionaries.ipynb
+++ b/python_helper_code_and_jsons/munging_dictionaries.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "2174a9f9-ca0a-49e4-be5f-11abd700cf4d",
    "metadata": {},
    "outputs": [],
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "a73567a8-1608-4775-8f5f-b0cd8487b589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"../src/utils/new_filter_data.js\""
+    "path = \"../src/utils/longer_filter_data.js\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "859a1400-eda3-4141-9c02-4d092a56f0fa",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "f9a41a75-614b-4dfb-9036-b518d8f1fc6c",
    "metadata": {},
    "outputs": [],
@@ -62,63 +62,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "2c4de880-53db-4835-b73e-5ac26f874d27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../src/utils/fd.json\",\"w\") as f:\n",
+    "with open(\"../src/utils/data.json\",\"w\") as f:\n",
     "    json.dump(dictionary, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "3dc635c0-73ef-4014-a273-5556a9ac847a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_labels(dictionary):\n",
+    "    labels=[]\n",
+    "    for key in dictionary.keys():\n",
+    "        d = dictionary[key]\n",
+    "        labels.append(d['label'])\n",
+    "        if 'children' in d.keys():\n",
+    "           labels += get_labels(d['children'])\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b4d54f78-a4bd-478c-b6c0-0b4c60fde238",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top = dictionary[\"0_0\"]['children'][\"0_0_0\"]['children']\n",
+    "top_labels = get_labels(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "95ef57f7-155b-40a7-8ddf-ab44a184ecdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = dictionary[\"0_0\"]['children'][\"0_0_1\"]['children']\n",
+    "hist_labels = get_labels(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0df4b6ff-272b-49e5-8b65-956695341fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga_labels = get_labels(dictionary[\"0_0\"]['children'][\"0_0_4\"]['children'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6b14c451-52c2-4119-8197-4024241ff193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cruk_labels = get_labels(dictionary[\"0_0\"]['children'][\"0_0_2\"]['children'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "81abcca9-32a0-468e-b34d-652f186e7fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cruk_labels = cruk_labels[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "26686b5d-7a8a-48a7-ab14-7944cb92a775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = {\"ICD-O topography\": top_labels, \n",
+    "          \"ICD-O histology\": hist_labels,\n",
+    "         \"CRUK\": cruk_labels, \n",
+    "         \"TCGA\":tcga_labels}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4a5f6599-b1b9-4cc5-9210-0bf1bc224c0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"../src/utils/labels.json\", \"w\") as f:\n",
+    "    json.dump(labels, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9097bb3c-4ad5-4ed4-96e0-8224dbb61164",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '0_1',\n",
-       " 'label': 'accessType',\n",
-       " 'category': 'filters',\n",
-       " 'primaryGroup': 'access-type',\n",
-       " 'count': '0',\n",
-       " 'children': {'0_1_0': {'id': '0_1_0',\n",
-       "   'label': 'Access restricted at present',\n",
-       "   'category': 'accessType',\n",
-       "   'primaryGroup': 'access-type',\n",
-       "   'count': '0'},\n",
-       "  '0_1_1': {'id': '0_1_1',\n",
-       "   'label': 'Closed to access',\n",
-       "   'category': 'accessType',\n",
-       "   'primaryGroup': 'access-type',\n",
-       "   'count': '0'},\n",
-       "  '0_1_2': {'id': '0_1_2',\n",
-       "   'label': 'Open in response to specific calls',\n",
-       "   'category': 'accessType',\n",
-       "   'primaryGroup': 'access-type',\n",
-       "   'count': '0'},\n",
-       "  '0_1_3': {'id': '0_1_3',\n",
-       "   'label': 'Open only through collaboration',\n",
-       "   'category': 'accessType',\n",
-       "   'primaryGroup': 'access-type',\n",
-       "   'count': '0'},\n",
-       "  '0_1_4': {'id': '0_1_4',\n",
-       "   'label': 'Open to applicants',\n",
-       "   'category': 'accessType',\n",
-       "   'primaryGroup': 'access-type',\n",
-       "   'count': '0'}}}"
+       "['C50 Breast',\n",
+       " 'C50.1 Central portion of breast',\n",
+       " 'C50.2 Upper-inner quadrant of breast',\n",
+       " 'C50.3 Lower-inner quadrant of breast',\n",
+       " 'C50.4 Upper-outer quadrant of breast',\n",
+       " 'C50.5 Lower-outer quadrant of breast',\n",
+       " 'C50.6 Axillary tail of breast',\n",
+       " 'C50.8 Overlapping lesion of breast',\n",
+       " 'C50.9 Breast, nos']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dictionary[\"0_1\"]"
+    "[i for i in labels[\"ICD-O topography\"] if 'reast' in i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d582b9e-2a5e-4fe6-b6fc-bef3479a8e52",
+   "metadata": {},
+   "source": [
+    "Please can you make me a json dictionary  which takes each of the  CRUK terms in turn and returns a dictionary with a list of the appropriate \"ICD-O topography\" and another list of the appropriate \"ICD-O histology\" terms, and then does the same for the TCGA terms.\n",
+    "The format will therefore look like this :\n",
+    "\n",
+    "{\"CRUK\":{'Acute lymphoblastic leukaemia (ALL)':{\"ICD-O topography\":[terms here], \"ICD-O histology\":[terms here], }...},\n",
+    "\"TCGA\":{'ACC (Adrenocortical carcinoma)':{\"ICD-O topography\":[terms here], \"ICD-O histology\":[terms here], }...},}\n",
+    "\n",
+    "The terms should be drawn exclusively from the \"ICD-O topography\" and \"ICD-O histology\" lists given with no changes to formatting or spelling (so that it can be computer read)\n",
+    "\n",
+    "The highest level term should be preferred: ie Breast Cancer would return just ['C50 Breast']\n",
+    "No extra words please\n"
    ]
   },
   {
