This is a massive reordering of the filters

--- a/python_helper_code_and_jsons/munging_dictionaries.ipynb
+++ b/python_helper_code_and_jsons/munging_dictionaries.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2174a9f9-ca0a-49e4-be5f-11abd700cf4d",
    "metadata": {},
    "outputs": [],
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a73567a8-1608-4775-8f5f-b0cd8487b589",
    "metadata": {},
    "outputs": [],
-   "source": "path = \"../src/utils/longer_filter_data1.js\""
+   "source": "path = \"../src/utils/longer_filter_data_old.js\""
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "859a1400-eda3-4141-9c02-4d092a56f0fa",
    "metadata": {},
    "outputs": [],
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "198a45a9-e55e-43a1-8b33-8832451c3a3a",
+   "execution_count": null,
+   "id": "12ee5135-1b78-4c4f-9513-caaee2840a01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +134,8 @@
     "        indent = \"  \" * level\n",
     "        print(f\"{indent}- {self.label} (ID: {self.id})\")\n",
     "        for child in self.children:\n",
-    "            child.print_tree(level + 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d04560d6-340f-482c-82a6-620172b9b2d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            child.print_tree(level + 1)\n",
+    "\n",
     "def build_dict(tree: TreeNode) -> dict:\n",
     "    \"Recursively builds the new dictionary from the tree\"\n",
     "\n",
@@ -153,16 +145,8 @@
     "    if tree.children:\n",
     "        dictionary[\"children\"] = dict([(child.id, build_dict(child)) for child in tree.children])\n",
     "    return dictionary\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e2c159f5-5e37-44fe-82e2-db7717b74e39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "\n",
     "def build_tree(data: Dict[str, Any]) -> TreeNode:\n",
     "    \"\"\"\n",
     "    Recursively builds the TreeNode structure from the raw dictionary data.\n",
@@ -206,6 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2176103d-db68-4379-91ed-0c44803a5b26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e60d8f42-3a9d-4f17-a297-33f6ed645e36",
    "metadata": {},
    "outputs": [],
@@ -245,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"../src/utils/longer_filter_data.js\"\n",
+    "path = \"../src/utils/longer_filter_data_old.js\"\n",
     "with open(path, \"w\") as f:\n",
     "    f.write(text[0]+\"\\n\")\n",
     "with open(path,\"a\") as f:\n",
@@ -343,7 +335,9 @@
    "id": "cc91e164-ba64-4e5e-acc6-bef627184218",
    "metadata": {},
    "outputs": [],
-   "source": "path = \"../src/utils/longer_filter_data1.js\""
+   "source": [
+    "path = \"../src/utils/longer_filter_data1.js\""
+   ]
   },
   {
    "cell_type": "code",
@@ -404,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
