--- a/python_helper_code_and_jsons/change_filters.ipynb
+++ b/python_helper_code_and_jsons/change_filters.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "id": "851fa273-83a6-4a10-85f5-c102c4ab8b41",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "id": "0ff0d54d-8da4-4dba-9fd2-cc012e8ea713",
    "metadata": {},
    "outputs": [],
@@ -554,35 +554,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "id": "e4fe10fd-1c74-4c77-9ceb-740710e3f61f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = data_tree.get_child(\"Techniques\").get_child('Multi-omic Data')"
+    "node = data_tree.get_child(\"Techniques\").get_child('Multi-omic Data').get_child(\"Spatial resolution\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "id": "5517edac-b4f5-47b4-b3c1-153ee128adff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[TreeNode(id='0_2_4_4_0', label='Biological molecules (eg DNA)', children=6),\n",
-       " TreeNode(id='0_2_4_4_1', label='Source', children=4),\n",
-       " TreeNode(id='0_2_4_4_2', label='Spatial resolution', children=3)]"
+       "[TreeNode(id='0_2_4_4_2_0', label='bulk', children=0),\n",
+       " TreeNode(id='0_2_4_4_2_1', label='single cell', children=0),\n",
+       " TreeNode(id='0_2_4_4_2_2', label='spatial', children=0)]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "node.children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae9e8355-2546-4efc-a56e-56c2ea82ed7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "descriptions = [\"tumour average - may include non-tumour cells\", \"specific cells\", \"includes positional information\"]"
    ]
   },
   {
@@ -624,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "id": "bb8b021e-bcf2-4f46-b7ec-99ae2944c96e",
    "metadata": {},
    "outputs": [],
