I've updated the dummy data to include the typicalAgeRange min and max and to add in the icons.
I've change schemaPage so that this mapping to the icons will now happen automatically.
This is done through associateIcons in schemaPage
To use the icons you'll need to link the icons to the urls using icon_url_mapping.json.
I've also changed SchemaPage so that it doesnt show the provenance coverage part (which we dont want) but (does show the temporal part which we do)

--- a/python_helper_code_and_jsons/change_filters.ipynb
+++ b/python_helper_code_and_jsons/change_filters.ipynb
@@ -3,21 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e03a5508-a64e-40c2-95d1-056df9137dba",
+   "id": "ee79e3c9-aba9-4129-8377-e6048db4c480",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "229085c2-ccd7-4ae0-8055-cd3c838cd8c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import json\n",
+    "\n",
+    "\n",
     "from typing import Dict, Any, List, Optional\n",
     "\n",
     "class TreeNode:\n",
@@ -60,16 +53,16 @@
     "        for child in self.children:\n",
     "            if child.label == label:\n",
     "                return child\n",
-    "        \n",
+    "    \n",
+    "    def add_child(self, label, description):\n",
+    "        identity = f\"{self.id}_{len(self.children)}\"\n",
+    "        child = TreeNode(id=identity, label=label, description=description, category=self.label, primaryGroup=self.category)\n",
+    "        self.children.append(child)\n",
     "\n",
     "    def add_children(self, labels, descriptions):\n",
     "        for i, label in enumerate(labels):\n",
-    "            child = TreeNode(id='0_2_3_4', \n",
-    "                            label=label, \n",
-    "                            category=self.label, \n",
-    "                            primaryGroup=self.category, \n",
-    "                            description = descriptions[i])\n",
-    "            self.children.append(child)\n",
+    "            description = descriptions[i]\n",
+    "            self.add_child(label, description)\n",
     "        \n",
     "\n",
     "    def print_tree(self, level=0):\n",
@@ -79,16 +72,8 @@
     "        indent = \"  \" * level\n",
     "        print(f\"{indent}- {self.label} (ID: {self.id})\")\n",
     "        for child in self.children:\n",
-    "            child.print_tree(level + 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "bc0da263-762e-4ed0-9712-03187139ef44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            child.print_tree(level + 1)\n",
+    "\n",
     "def build_dict(tree: TreeNode) -> dict:\n",
     "    \"Recursively builds the new dictionary from the tree\"\n",
     "\n",
@@ -98,16 +83,8 @@
     "    if tree.children:\n",
     "        dictionary[\"children\"] = dict([(child.id, build_dict(child)) for child in tree.children])\n",
     "    return dictionary\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4d811190-b419-43f1-95b4-b9b85b1ceea2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "\n",
     "def build_tree(data: Dict[str, Any]) -> TreeNode:\n",
     "    \"\"\"\n",
     "    Recursively builds the TreeNode structure from the raw dictionary data.\n",
@@ -143,68 +120,212 @@
     "            child_node = build_tree(child_dict)\n",
     "            current_node.children.append(child_node)\n",
     "\n",
-    "    return current_node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35940dfc-47fb-402b-b6dd-09096dd9ed54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "42aa9fe2-018a-4fc0-918f-fc5067ca547f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return current_node\n",
+    "\n",
+    "\n",
+    "def add_a_filter(filter_path, place, description, output_path):\n",
+    "    place_list = place.split(\"/\")\n",
+    "    lower = place_list[0].lower()\n",
+    "    cancer = build_tree(filters[\"0_0\"])\n",
+    "    access = build_tree(filters[\"0_1\"])\n",
+    "    data = build_tree(filters[\"0_2\"])\n",
+    "    names = {\"cancer\" : (\"0_0\",cancer), \"access\" : (\"0_1\",access), \"data\" : (\"0_2\",data)}\n",
+    "    for name in names:\n",
+    "        if name in lower:\n",
+    "            key,node = names[name]\n",
+    "            key,parent = names[name]\n",
+    "            break\n",
+    "    for child_name in place_list[1:-1]:\n",
+    "        try:\n",
+    "            node = node.get_child(child_name)\n",
+    "        except:\n",
+    "            node = null\n",
+    "    if node:\n",
+    "        node.add_child(place_list[-1], description)\n",
+    "        filters[key] = build_dict(parent)\n",
+    "    with open(output_path, \"w\") as f:\n",
+    "        f.write(\"const theFilters =\\n\")\n",
+    "        json.dump(filters, f)\n",
+    "        f.write(\";\\nexport const filterData = theFilters;\")\n",
+    "\n",
     "dummy_path = \"../src/utils/dummy_data\"\n",
-    "utils_path = \"../src/utils\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6708a01e-8aca-4fb1-86cb-de3c659067cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert(os.path.isdir(dummy_path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9e1ee4af-0f5d-4a99-bb9c-b79df81de84c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "utils_path = \"../src/utils\"\n",
+    "\n",
+    "assert(os.path.isdir(dummy_path))\n",
+    "\n",
     "with open(os.path.join(utils_path, \"longer_filter_data.js\")) as f:\n",
-    "    filters = eval(\"\".join(f.read().split(\"\\n\")[1:-1])[:-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0a7ddc65-f651-47a8-b2a9-08b56426f664",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    filters = eval(\"\".join(f.read().split(\"\\n\")[1:-1])[:-1])\n",
+    "\n",
     "cancer_tree = build_tree(filters[\"0_0\"])\n",
-    "access_tree = build_tree(filters[\"0_1\"])"
+    "access_tree = build_tree(filters[\"0_1\"])\n",
+    "data_tree = build_tree(filters[\"0_2\"])\n",
+    "\n",
+    "def get_labels(tree):\n",
+    "    def add_label(labels, node):\n",
+    "        labels.append((node.id, node.label))\n",
+    "        if node.children:\n",
+    "            for child in node.children:\n",
+    "                add_label(labels,child)\n",
+    "        return labels\n",
+    "    labels = add_label([], tree) \n",
+    "    return labels\n",
+    "\n",
+    "def get_upload_entry(tree):\n",
+    "    def add_entry(entries, node):\n",
+    "        entry = (node.id, \n",
+    "                 {\"id\":node.id, \n",
+    "                  \"label\":node.label,\n",
+    "                  \"category\":node.category,\n",
+    "                 \"primaryGroup\":node.primaryGroup,\n",
+    "                 \"description\":node.description})\n",
+    "        entries.append(entry)\n",
+    "        if node.children:\n",
+    "            for child in node.children:\n",
+    "                add_entry(entries , child)\n",
+    "        return entries\n",
+    "    entries = add_entry([], tree) \n",
+    "    return entries\n",
+    "\n",
+    "def get_full_labels(tree):\n",
+    "    def add_label(labels, root, node):\n",
+    "        root = \"/\".join([root, node.label])\n",
+    "        labels.append((node.id, root[1:]))\n",
+    "        if node.children:\n",
+    "            for child in node.children:\n",
+    "                add_label(labels, root, child)\n",
+    "        return labels\n",
+    "    labels = add_label([], \"\", tree) \n",
+    "    return labels\n",
+    "        \n",
+    "\n",
+    "\n",
+    "key_label_pairs= (get_labels(cancer_tree) + get_labels(access_tree) + get_labels(data_tree))\n",
+    "key_label_dict = dict(key_label_pairs) \n",
+    "with open(os.path.join(utils_path, \"key_label_dict.json\"), \"w\") as f:\n",
+    "    json.dump(key_label_dict, f)\n",
+    "label_key_pairs = [(l,k) for k,l in key_label_pairs]\n",
+    "label_key_dict = dict(label_key_pairs)\n",
+    "with open(os.path.join(utils_path, \"label__key_dict.json\"), \"w\") as f:\n",
+    "    json.dump(label_key_dict, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "33bb2cd2-cb0e-4b21-8f68-2141a176f2ef",
+   "execution_count": 2,
+   "id": "41e3ed05-e46d-49f3-9188-9a7094f07520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_tree = build_tree(filters[\"0_2\"])"
+    "key_entry_dict = dict(get_upload_entry(cancer_tree) + get_upload_entry(access_tree) + get_upload_entry(data_tree))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "620f68e8-d151-4623-a051-b9762b442472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(utils_path, \"key_entry_dict.json\"), \"w\") as f:\n",
+    "    json.dump(key_entry_dict, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cbadb435-2e79-47d2-bbf7-ca8e047d84fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[TreeNode(id='0_2_4_4_1_0', label='Control', children=0),\n",
+       " TreeNode(id='0_2_4_4_1_1', label='Liquid Biopsy', children=0),\n",
+       " TreeNode(id='0_2_4_4_1_2', label='Other', children=0),\n",
+       " TreeNode(id='0_2_4_4_1_3', label='Tumour', children=0)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "self.get_child(\"Techniques\").get_child(\"Multi-omic Data\").get_child(\"Source\").children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9ac78fd5-7ce5-49c1-bfbd-c495742e427f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def add_a_filter(filter_path, place, description, output_path):\n",
+    "    place_list = place.split(\"/\")\n",
+    "    lower = place_list[0].lower()\n",
+    "    cancer = build_tree(filters[\"0_0\"])\n",
+    "    access = build_tree(filters[\"0_1\"])\n",
+    "    data = build_tree(filters[\"0_2\"])\n",
+    "    names = {\"cancer\" : (\"0_0\",cancer), \"access\" : (\"0_1\",access), \"data\" : (\"0_2\",data)}\n",
+    "    for name in names:\n",
+    "        if name in lower:\n",
+    "            key,node = names[name]\n",
+    "            key,parent = names[name]\n",
+    "            break\n",
+    "    for child_name in place_list[1:-1]:\n",
+    "        try:\n",
+    "            node = node.get_child(child_name)\n",
+    "        except:\n",
+    "            node = null\n",
+    "    if node:\n",
+    "        node.add_child(place_list[-1], description)\n",
+    "        filters[key] = build_dict(parent)\n",
+    "    with open(output_path, \"w\") as f:\n",
+    "        f.write(\"const theFilters =\\n\")\n",
+    "        json.dump(filters, f)\n",
+    "        f.write(\";\\nexport const filterData = theFilters;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8920a55e-34e5-4783-94b8-279e75c9477b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"check.js\", \"w\") as f:\n",
+    "    json.dump(filters, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "781f4d16-acb2-47a8-b3ce-1f4e21e6afb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f12c52e2-e11a-47e9-a5e1-c64875cb68f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "f(h)"
    ]
   },
   {
@@ -668,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
